changed repo structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 .env
-.venv
-todos.md
-data-handling-ideas.ipynb
-loadjp2.ipynb
-test_classification.ipynb
-test_get_data.ipynb
-rs_tools
-setup
+remove
+data/eodag*
+data/shapefiles
