--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .env
 remove
-data
-data/eodag*
-data/shapefiles
 notebooks/eotools/__pycache__
+notebooks/eotools/roi.py
+data/eodag-downloads/*
+data/eodag-postprocess
+#data/eodag-serialize
+#data/shapefiles
+#data
+requirements.txt
